...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Zu-NS-HPI">
                                <rect key="frame" x="140" y="63" width="93" height="22"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                <size key="titleShadowOffset" width="10" height="10"/>
                                <state key="normal" title="Get Saying"/>
                                <connections>
                                    <action selector="btnSaying:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NN5-b7-1C5"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
